--- a/public/index.html
+++ b/public/index.html
@@ -203,7 +203,7 @@
                 <div class="center">
 
                     <div class="logo">
-                        <img width="128" src="assets/images/logos/fuse.svg" alt="logo">
+                        <img width="128" src="assets/images/logos/icon.png" alt="logo">
                     </div>
 
                     <!-- Material Design Spinner -->
