--- a/public/index.html
+++ b/public/index.html
@@ -194,7 +194,7 @@
     </head>
     <body>
         <noscript>
-            You need to enable JavaScript to run this app.
+            Vous devez activer JavaScript pour exécuter cette application.
         </noscript>
         <div id="root" class="flex">
             <!-- FUSE Splash Screen -->
