--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="author" content="7e-Sky">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="theme-color" content="#000000">
-        <base href="/">
-        <!--
+
+<head>
+    <meta charset="utf-8">
+    <meta name="author" content="7e-Sky">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="theme-color" content="#000000">
+    <base href="/">
+    <!--
           manifest.json provides metadata used when your web app is added to the
           homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
         -->
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-        <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
-        <!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
-        <link href="%PUBLIC_URL%/assets/fonts/material-outline-icons/styles.css" rel="stylesheet">
-        <link href="%PUBLIC_URL%/assets/fonts/meteocons/style.css" rel="stylesheet">
+    <!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
+    <link href="%PUBLIC_URL%/assets/fonts/material-outline-icons/styles.css" rel="stylesheet">
+    <link href="%PUBLIC_URL%/assets/fonts/meteocons/style.css" rel="stylesheet">
 
-        <noscript id="jss-insertion-point"></noscript>
-        <!--
+    <noscript id="jss-insertion-point"></noscript>
+    <!--
           Notice the use of %PUBLIC_URL% in the tags above.
           It will be replaced with the URL of the `public` folder during the build.
           Only files inside the `public` folder can be referenced from the HTML.
@@ -27,207 +28,218 @@
           work correctly both with client-side routing and a non-root public URL.
           Learn how to configure a non-root public URL by running `npm run build`.
         -->
-        <title>Les Achats Industriels - Admin Panel</title>
+    <title>Les Achats Industriels - Admin Panel</title>
 
-        <!-- FUSE Splash Screen CSS -->
-        <style type="text/css">
-            #fuse-splash-screen {
-                display: block;
-                position: absolute;
-                top: 0;
-                left: 0;
-                right: 0;
-                bottom: 0;
-                background-color: #2D323D;
-                z-index: 99999;
-                pointer-events: none;
+    <!-- FUSE Splash Screen CSS -->
+    <style type="text/css">
+        #fuse-splash-screen {
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #2D323D;
+            z-index: 99999;
+            pointer-events: none;
+        }
+
+        #fuse-splash-screen .center {
+            display: block;
+            width: 100%;
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+
+        #fuse-splash-screen .logo {
+            width: 128px;
+            margin: 0 auto;
+        }
+
+        #fuse-splash-screen .logo img {
+            filter: drop-shadow(0px 10px 6px rgba(0, 0, 0, 0.2))
+        }
+
+        #fuse-splash-screen .spinner-wrapper {
+            display: block;
+            position: relative;
+            width: 100%;
+            min-height: 100px;
+            height: 100px;
+        }
+
+        #fuse-splash-screen .spinner-wrapper .spinner {
+            position: absolute;
+            overflow: hidden;
+            left: 50%;
+            margin-left: -50px;
+            animation: outer-rotate 2.91667s linear infinite;
+        }
+
+        #fuse-splash-screen .spinner-wrapper .spinner .inner {
+            width: 100px;
+            height: 100px;
+            position: relative;
+            animation: sporadic-rotate 5.25s cubic-bezier(0.35, 0, 0.25, 1) infinite;
+        }
+
+        #fuse-splash-screen .spinner-wrapper .spinner .inner .gap {
+            position: absolute;
+            left: 49px;
+            right: 49px;
+            top: 0;
+            bottom: 0;
+            border-top: 10px solid;
+            box-sizing: border-box;
+        }
+
+        #fuse-splash-screen .spinner-wrapper .spinner .inner .left,
+        #fuse-splash-screen .spinner-wrapper .spinner .inner .right {
+            position: absolute;
+            top: 0;
+            height: 100px;
+            width: 50px;
+            overflow: hidden;
+        }
+
+        #fuse-splash-screen .spinner-wrapper .spinner .inner .left .half-circle,
+        #fuse-splash-screen .spinner-wrapper .spinner .inner .right .half-circle {
+            position: absolute;
+            top: 0;
+            width: 100px;
+            height: 100px;
+            box-sizing: border-box;
+            border: 10px solid #4285F4;
+            border-bottom-color: transparent;
+            border-radius: 50%;
+        }
+
+        #fuse-splash-screen .spinner-wrapper .spinner .inner .left {
+            left: 0;
+        }
+
+        #fuse-splash-screen .spinner-wrapper .spinner .inner .left .half-circle {
+            left: 0;
+            border-right-color: transparent;
+            animation: left-wobble 1.3125s cubic-bezier(0.35, 0, 0.25, 1) infinite;
+            -webkit-animation: left-wobble 1.3125s cubic-bezier(0.35, 0, 0.25, 1) infinite;
+        }
+
+        #fuse-splash-screen .spinner-wrapper .spinner .inner .right {
+            right: 0;
+        }
+
+        #fuse-splash-screen .spinner-wrapper .spinner .inner .right .half-circle {
+            right: 0;
+            border-left-color: transparent;
+            animation: right-wobble 1.3125s cubic-bezier(0.35, 0, 0.25, 1) infinite;
+            -webkit-animation: right-wobble 1.3125s cubic-bezier(0.35, 0, 0.25, 1) infinite;
+        }
+
+        @keyframes outer-rotate {
+            0% {
+                transform: rotate(0deg) scale(0.5);
             }
-
-            #fuse-splash-screen .center {
-                display: block;
-                width: 100%;
-                position: absolute;
-                top: 50%;
-                transform: translateY(-50%);
+            100% {
+                transform: rotate(360deg) scale(0.5);
             }
+        }
 
-            #fuse-splash-screen .logo {
-                width: 128px;
-                margin: 0 auto;
+        @keyframes left-wobble {
+            0%,
+            100% {
+                transform: rotate(130deg);
             }
-
-            #fuse-splash-screen .logo img {
-                filter: drop-shadow(0px 10px 6px rgba(0, 0, 0, 0.2))
+            50% {
+                transform: rotate(-5deg);
             }
+        }
 
-            #fuse-splash-screen .spinner-wrapper {
-                display: block;
-                position: relative;
-                width: 100%;
-                min-height: 100px;
-                height: 100px;
+        @keyframes right-wobble {
+            0%,
+            100% {
+                transform: rotate(-130deg);
             }
-
-            #fuse-splash-screen .spinner-wrapper .spinner {
-                position: absolute;
-                overflow: hidden;
-                left: 50%;
-                margin-left: -50px;
-                animation: outer-rotate 2.91667s linear infinite;
+            50% {
+                transform: rotate(5deg);
             }
+        }
 
-            #fuse-splash-screen .spinner-wrapper .spinner .inner {
-                width: 100px;
-                height: 100px;
-                position: relative;
-                animation: sporadic-rotate 5.25s cubic-bezier(0.35, 0, 0.25, 1) infinite;
+        @keyframes sporadic-rotate {
+            12.5% {
+                transform: rotate(135deg);
             }
-
-            #fuse-splash-screen .spinner-wrapper .spinner .inner .gap {
-                position: absolute;
-                left: 49px;
-                right: 49px;
-                top: 0;
-                bottom: 0;
-                border-top: 10px solid;
-                box-sizing: border-box;
+            25% {
+                transform: rotate(270deg);
             }
-
-            #fuse-splash-screen .spinner-wrapper .spinner .inner .left,
-            #fuse-splash-screen .spinner-wrapper .spinner .inner .right {
-                position: absolute;
-                top: 0;
-                height: 100px;
-                width: 50px;
-                overflow: hidden;
+            37.5% {
+                transform: rotate(405deg);
             }
-
-            #fuse-splash-screen .spinner-wrapper .spinner .inner .left .half-circle,
-            #fuse-splash-screen .spinner-wrapper .spinner .inner .right .half-circle {
-                position: absolute;
-                top: 0;
-                width: 100px;
-                height: 100px;
-                box-sizing: border-box;
-                border: 10px solid #4285F4;
-                border-bottom-color: transparent;
-                border-radius: 50%;
+            50% {
+                transform: rotate(540deg);
             }
-
-            #fuse-splash-screen .spinner-wrapper .spinner .inner .left {
-                left: 0;
+            62.5% {
+                transform: rotate(675deg);
             }
-
-            #fuse-splash-screen .spinner-wrapper .spinner .inner .left .half-circle {
-                left: 0;
-                border-right-color: transparent;
-                animation: left-wobble 1.3125s cubic-bezier(0.35, 0, 0.25, 1) infinite;
-                -webkit-animation: left-wobble 1.3125s cubic-bezier(0.35, 0, 0.25, 1) infinite;
+            75% {
+                transform: rotate(810deg);
             }
-
-            #fuse-splash-screen .spinner-wrapper .spinner .inner .right {
-                right: 0;
+            87.5% {
+                transform: rotate(945deg);
             }
-
-            #fuse-splash-screen .spinner-wrapper .spinner .inner .right .half-circle {
-                right: 0;
-                border-left-color: transparent;
-                animation: right-wobble 1.3125s cubic-bezier(0.35, 0, 0.25, 1) infinite;
-                -webkit-animation: right-wobble 1.3125s cubic-bezier(0.35, 0, 0.25, 1) infinite;
+            100% {
+                transform: rotate(1080deg);
             }
+        }
+    </style>
+    <!-- / FUSE Splash Screen CSS -->
+</head>
 
-            @keyframes outer-rotate {
-                0% {
-                    transform: rotate(0deg) scale(0.5);
-                }
-                100% {
-                    transform: rotate(360deg) scale(0.5);
-                }
-            }
+<body>
+    <noscript>
+        Vous devez activer JavaScript pour exécuter cette application.
+    </noscript>
+    <div id="root" class="flex">
+        <!-- FUSE Splash Screen -->
+        <div id="fuse-splash-screen">
 
-            @keyframes left-wobble {
-                0%, 100% {
-                    transform: rotate(130deg);
-                }
-                50% {
-                    transform: rotate(-5deg);
-                }
-            }
+            <div class="center">
 
-            @keyframes right-wobble {
-                0%, 100% {
-                    transform: rotate(-130deg);
-                }
-                50% {
-                    transform: rotate(5deg);
-                }
-            }
+                <div class="logo">
+                    <img width="128" src="assets/images/logos/icon.png" alt="logo">
+                </div>
 
-            @keyframes sporadic-rotate {
-                12.5% {
-                    transform: rotate(135deg);
-                }
-                25% {
-                    transform: rotate(270deg);
-                }
-                37.5% {
-                    transform: rotate(405deg);
-                }
-                50% {
-                    transform: rotate(540deg);
-                }
-                62.5% {
-                    transform: rotate(675deg);
-                }
-                75% {
-                    transform: rotate(810deg);
-                }
-                87.5% {
-                    transform: rotate(945deg);
-                }
-                100% {
-                    transform: rotate(1080deg);
-                }
-            }
-        </style>
-        <!-- / FUSE Splash Screen CSS -->
-    </head>
-    <body>
-        <noscript>
-            Vous devez activer JavaScript pour exécuter cette application.
-        </noscript>
-        <div id="root" class="flex">
-            <!-- FUSE Splash Screen -->
-            <div id="fuse-splash-screen">
-
-                <div class="center">
-
-                    <div class="logo">
-                        <img width="128" src="assets/images/logos/icon.png" alt="logo">
-                    </div>
-
-                    <!-- Material Design Spinner -->
-                    <div class="spinner-wrapper">
-                        <div class="spinner">
-                            <div class="inner">
-                                <div class="gap"></div>
-                                <div class="left">
-                                    <div class="half-circle"></div>
-                                </div>
-                                <div class="right">
-                                    <div class="half-circle"></div>
-                                </div>
+                <!-- Material Design Spinner -->
+                <div class="spinner-wrapper">
+                    <div class="spinner">
+                        <div class="inner">
+                            <div class="gap"></div>
+                            <div class="left">
+                                <div class="half-circle"></div>
+                            </div>
+                            <div class="right">
+                                <div class="half-circle"></div>
                             </div>
                         </div>
                     </div>
-                    <!-- / Material Design Spinner -->
-
                 </div>
+                <!-- / Material Design Spinner -->
 
             </div>
-            <!-- / FUSE Splash Screen -->
+
         </div>
-        <!--
+        <!-- / FUSE Splash Screen -->
+    </div>
+    <!-- Go to www.addthis.com/dashboard to customize your tools -->
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5e42be25f98d0d65" async="async"></script>
+    <script type="text/javascript">
+        // Call this function once the rest of the document is loaded
+        function loadAddThis() {
+            addthis.init()
+        }
+    </script>
+    <!--
           This HTML file is a template.
           If you open it directly in the browser, you will see an empty page.
 
@@ -237,5 +249,6 @@
           To begin the development, run `npm start` or `yarn start`.
           To create a production bundle, use `npm run build` or `yarn build`.
         -->
-    </body>
+</body>
+
 </html>
