--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,8 @@
           Learn how to configure a non-root public URL by running `npm run build`.
         -->
     <title>Les Achats Industriels | La place de marché BtoB</title>
-    <meta name="description" content="Les Achats Industriels est une place de marché b2b qui permet aux Acheteurs et aux Fournisseurs de se rencontrer dans une même plate-forme." />
+    <meta name="description"
+        content="Les Achats Industriels est une place de marché b2b qui permet aux Acheteurs et aux Fournisseurs de se rencontrer dans une même plate-forme." />
 
 
     <!-- FUSE Splash Screen CSS -->
@@ -143,26 +144,31 @@
             0% {
                 transform: rotate(0deg) scale(0.5);
             }
+
             100% {
                 transform: rotate(360deg) scale(0.5);
             }
         }
 
         @keyframes left-wobble {
+
             0%,
             100% {
                 transform: rotate(130deg);
             }
+
             50% {
                 transform: rotate(-5deg);
             }
         }
 
         @keyframes right-wobble {
+
             0%,
             100% {
                 transform: rotate(-130deg);
             }
+
             50% {
                 transform: rotate(5deg);
             }
@@ -172,24 +178,31 @@
             12.5% {
                 transform: rotate(135deg);
             }
+
             25% {
                 transform: rotate(270deg);
             }
+
             37.5% {
                 transform: rotate(405deg);
             }
+
             50% {
                 transform: rotate(540deg);
             }
+
             62.5% {
                 transform: rotate(675deg);
             }
+
             75% {
                 transform: rotate(810deg);
             }
+
             87.5% {
                 transform: rotate(945deg);
             }
+
             100% {
                 transform: rotate(1080deg);
             }
@@ -233,7 +246,7 @@
         </div>
         <!-- / FUSE Splash Screen -->
     </div>
-    
+
     <!--
           This HTML file is a template.
           If you open it directly in the browser, you will see an empty page.
@@ -244,6 +257,16 @@
           To begin the development, run `npm start` or `yarn start`.
           To create a production bundle, use `npm run build` or `yarn build`.
         -->
+    <!-- Start of LiveChat (www.livechatinc.com) code -->
+    <script>
+        window.__lc = window.__lc || {};
+        window.__lc.license = 11945763;
+        ; (function (n, t, c) { function i(n) { return e._h ? e._h.apply(null, n) : e._q.push(n) } var e = { _q: [], _h: null, _v: "2.0", on: function () { i(["on", c.call(arguments)]) }, once: function () { i(["once", c.call(arguments)]) }, off: function () { i(["off", c.call(arguments)]) }, get: function () { if (!e._h) throw new Error("[LiveChatWidget] You can't use getters before load."); return i(["get", c.call(arguments)]) }, call: function () { i(["call", c.call(arguments)]) }, init: function () { var n = t.createElement("script"); n.async = !0, n.type = "text/javascript", n.src = "https://cdn.livechatinc.com/tracking.js", t.head.appendChild(n) } }; !n.__lc.asyncInit && e.init(), n.LiveChatWidget = n.LiveChatWidget || e }(window, document, [].slice))
+    </script>
+    <noscript><a href="https://www.livechatinc.com/chat-with/11945763/" rel="nofollow">Chat with us</a>, powered by <a
+            href="https://www.livechatinc.com/?welcome" rel="noopener nofollow" target="_blank">LiveChat</a></noscript>
+    <!-- End of LiveChat code -->
+
 </body>
 
 </html>
