--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>Site Maintenance | Shifter</title>
+<title>Site Maintenance | Les achats Industriels</title>
 <style>
     body {
         text-align: center;
