--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,17 @@
     body {
         text-align: center;
         padding: 150px;
+        color: white !important
     }
 
     h1 {
         font-size: 50px;
+        color: white !important
     }
 
     body {
         font: 20px Helvetica, sans-serif;
-        color: #333;
+        color: white !important
     }
 
     article {
@@ -20,6 +22,7 @@
         text-align: left;
         width: 650px;
         margin: 0 auto;
+        color: white !important
     }
 
     a {
@@ -28,18 +31,20 @@
     }
 
     a:hover {
-        color: #333;
         text-decoration: none;
+        color: white !important
     }
 </style>
 
 <article>
     <h1>Nous reviendrons bientôt</h1>
+    <br>
     <div>
         <p>Désolé pour le dérangement, mais nous effectuons actuellement une maintenance. Vous pouvez nous contacter sur l'adresse
             email suivante
+            <br>
             <a href="mailto=webmaster@lesindustriels.com">webmaster@lesindustriels.com</a>
         </p>
-        <p>Les Achats Industriels</p>
+        <br>
     </div>
 </article>
