Maintenance Email Fix

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
         <p>Désolé pour le dérangement, mais nous effectuons actuellement une maintenance. Vous pouvez nous contacter sur l'adresse
             email suivante
             <br>
-            <a href="mailto=webmaster@lesindustriels.com">webmaster@lesindustriels.com</a>
+            <a href="mailto=webmaster@lesachatsindustriels.com">webmaster@lesindustriels.com</a>
         </p>
         <br>
     </div>
