--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,10 @@
             c.src = 'https://www.smartsuppchat.com/loader.js?'; s.parentNode.insertBefore(c, s);
         })(document);
     </script>
+    <script>smartsupp('group', 'bVHtLq3a0e'); //group Support</script>
+    <script>smartsupp('group', 'sP1UysClx9'); //group Facturation</script>
+    <script>smartsupp('group', 'VRKl1HXakd'); //group Vente</script>
+
     <!--
           Notice the use of %PUBLIC_URL% in the tags above.
           It will be replaced with the URL of the `public` folder during the build.
