--- a/public/index.html
+++ b/public/index.html
@@ -42,12 +42,12 @@
           Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
           work correctly both with client-side routing and a non-root public URL.
           Learn how to configure a non-root public URL by running `npm run build`.
-     
+       -->
     <title>Les Achats Industriels | La place de marché BtoB</title>
-    <meta name="description"
-        content="Les Achats Industriels est une place de marché b2b qui permet aux Acheteurs et aux Fournisseurs de se rencontrer dans une même plate-forme." />
+    <meta name="description" content="Les Achats Industriels est une place de marché b2b qui permet aux Acheteurs et aux Fournisseurs de se rencontrer dans une même plate-forme."
+    />
 
-   -->
+
     <!-- FUSE Splash Screen CSS -->
     <style type="text/css">
         #fuse-splash-screen {
