--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <base href="/">
-    <!--
-          manifest.json provides metadata used when your web app is added to the
-          homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
-        -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-
+    <link rel="manifest" href="./manifest.json">
+    <link rel="shortcut icon" href="./favicon.ico">
     <!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
-    <link href="%PUBLIC_URL%/assets/fonts/material-outline-icons/styles.css" rel="stylesheet">
-    <link href="%PUBLIC_URL%/assets/fonts/meteocons/style.css" rel="stylesheet">
+    <link href="./assets/fonts/material-outline-icons/styles.css" rel="stylesheet">
+    <link href="./assets/fonts/meteocons/style.css" rel="stylesheet">
+    <link rel="apple-touch-icon" href="./assets/images/logos/logo192.png">
 
     <noscript id="jss-insertion-point"></noscript>
     <!-- Smartsupp Live Chat script -->
@@ -33,20 +29,11 @@
     <script>smartsupp('group', 'bVHtLq3a0e'); //group Support</script>
     <script>smartsupp('group', 'sP1UysClx9'); //group Facturation</script>
     <script>smartsupp('group', 'VRKl1HXakd'); //group Vente</script>
-
-    <!--
-          Notice the use of %PUBLIC_URL% in the tags above.
-          It will be replaced with the URL of the `public` folder during the build.
-          Only files inside the `public` folder can be referenced from the HTML.
-
-          Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-          work correctly both with client-side routing and a non-root public URL.
-          Learn how to configure a non-root public URL by running `npm run build`.
-       -->
     <title>Les Achats Industriels | La place de marché BtoB</title>
     <meta name="description" content="Les Achats Industriels est une place de marché b2b qui permet aux Acheteurs et aux Fournisseurs de se rencontrer dans une même plate-forme."
     />
 
+    
 
     <!-- FUSE Splash Screen CSS -->
     <style type="text/css">
@@ -272,6 +259,15 @@
           To begin the development, run `npm start` or `yarn start`.
           To create a production bundle, use `npm run build` or `yarn build`.
         -->
+        <script>
+            if('serviceWorker' in navigator){
+                window.addEventListener('load',()=>{
+                    navigator.serviceWorker.register('./serviceworker.js')
+                    .then((reg)=>console.log('Success: ', reg.scope))
+                    .catch((err)=>console.log('Failure: ', err))
+                })
+            }
+        </script>
 
 
 </body>
