--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,26 @@
             c.src = 'https://www.smartsuppchat.com/loader.js?'; s.parentNode.insertBefore(c, s);
         })(document);
     </script>
+    <!--GoogleAnalytics-->
+    <script type="text/javascript">
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-105310719-1', 'auto');
+        ga('require', 'GTM-MLP9TT6');
+        ga('send', 'pageview');
+
+    </script>
+    <script data-ad-client="ca-pub-1596777149085575" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
     <script>smartsupp('group', 'bVHtLq3a0e'); //group Support</script>
     <script>smartsupp('group', 'sP1UysClx9'); //group Facturation</script>
     <script>smartsupp('group', 'VRKl1HXakd'); //group Vente</script>
+
     <title>Les Achats Industriels | La place de marché BtoB</title>
     <meta name="description" content="Les Achats Industriels est une place de marché b2b qui permet aux Acheteurs et aux Fournisseurs de se rencontrer dans une même plate-forme."
     />
