--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="author" content="7e-Sky">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <base href="/">
     <link rel="manifest" href="./manifest.json">
@@ -17,18 +16,16 @@
 
     <noscript id="jss-insertion-point"></noscript>
     <!-- Smartsupp Live Chat script -->
-    <script type="text/javascript">
-     var _smartsupp = _smartsupp || {};
-     _smartsupp.key = 'fbc45bcbe309bece270b402ceee1f6cec597d75a';
-      window.smartsupp||(function(d) {
-      var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
-      s=d.getElementsByTagName('script')[0];c=d.createElement('script');
-      c.type='text/javascript';c.charset='utf-8';c.async=true;
-      c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
-      })(document);
-</script>
-<noscript> Powered by <a href=“https://www.smartsupp.com” target=“_blank”>Smartsupp</a></noscript>
-    </script>
+    <!-- <script type="text/javascript">
+        var _smartsupp = _smartsupp || {};
+        _smartsupp.key = '084242fbcdc2f111da4e40a4a8c578dfd3e55cc1';
+        window.smartsupp || (function (d) {
+            var s, c, o = smartsupp = function () { o._.push(arguments) }; o._ = [];
+            s = d.getElementsByTagName('script')[0]; c = d.createElement('script');
+            c.type = 'text/javascript'; c.charset = 'utf-8'; c.async = true;
+            c.src = 'https://www.smartsuppchat.com/loader.js?'; s.parentNode.insertBefore(c, s);
+        })(document);
+    </script> -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-105310719-1"></script>
 
