--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
     <script>smartsupp('group', 'VRKl1HXakd'); //group Vente</script>
 
     <title>Les Achats Industriels | La place de marché BtoB</title>
-    <meta name="description" content="Les Achats Industriels est une place de marché b2b qui permet aux Acheteurs et aux Fournisseurs de se rencontrer dans une même plate-forme."
+    <meta name="description" content="Boopursal est une place de marché b2b qui permet aux Acheteurs et aux Fournisseurs de se rencontrer dans une même plate-forme."
     />
 
     <!-- FUSE Splash Screen CSS -->
