--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
         })(document);
     </script> -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script src="https://cdn.jsdelivr.net/npm/lucide@latest"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-105310719-1"></script>
 
     <script>
