--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,11 @@
 
     <!-- FUSE Splash Screen CSS -->
     <style type="text/css">
+        
+        .MuiAppBar-colorPrimary-628 {
+        color: #3C4252;
+        background-color: #fff;
+        }
         #fuse-splash-screen {
             display: block;
             position: absolute;
