--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
     <link rel="apple-touch-icon" href="./assets/images/logos/logo192.png">
 
     <noscript id="jss-insertion-point"></noscript>
-    <script type="text/javascript">
+    <!-- Smartsupp Live Chat script -->
+    <!-- <script type="text/javascript">
         var _smartsupp = _smartsupp || {};
         _smartsupp.key = '084242fbcdc2f111da4e40a4a8c578dfd3e55cc1';
         window.smartsupp || (function (d) {
@@ -24,7 +25,7 @@
             c.type = 'text/javascript'; c.charset = 'utf-8'; c.async = true;
             c.src = 'https://www.smartsuppchat.com/loader.js?'; s.parentNode.insertBefore(c, s);
         })(document);
-    </script> 
+    </script> -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script src="https://cdn.jsdelivr.net/npm/lucide@latest"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-105310719-1"></script>
