--- a/public/index.html
+++ b/public/index.html
@@ -16,16 +16,17 @@
 
     <noscript id="jss-insertion-point"></noscript>
     <!-- Smartsupp Live Chat script -->
-    <!-- <script type="text/javascript">
-        var _smartsupp = _smartsupp || {};
-        _smartsupp.key = '084242fbcdc2f111da4e40a4a8c578dfd3e55cc1';
-        window.smartsupp || (function (d) {
-            var s, c, o = smartsupp = function () { o._.push(arguments) }; o._ = [];
-            s = d.getElementsByTagName('script')[0]; c = d.createElement('script');
-            c.type = 'text/javascript'; c.charset = 'utf-8'; c.async = true;
-            c.src = 'https://www.smartsuppchat.com/loader.js?'; s.parentNode.insertBefore(c, s);
-        })(document);
-    </script> -->
+    <!-- Smartsupp Live Chat script -->
+<script type="text/javascript">
+    var _smartsupp = _smartsupp || {};
+    _smartsupp.key = '8f4b8dbaaf4d5ddc18184abcfbbb25674ceeca5c';
+    window.smartsupp||(function(d) {
+      var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
+      s=d.getElementsByTagName('script')[0];c=d.createElement('script');
+      c.type='text/javascript';c.charset='utf-8';c.async=true;
+      c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
+    })(document);
+    </script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script src="https://cdn.jsdelivr.net/npm/lucide@latest"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-105310719-1"></script>
